# art-design-pro-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  PROJECT_SUMMARY.md  PUBLISH_TO_GITHUB.md  QUICK_PUBLISH.md  README.md  README_EN.md  READY_TO_PUBLISH.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: frontend.yml  rust.yml
backend/: .env  Cargo.toml  README.md  hash_gen  hash_gen.rs  test_api.sh  test_user_center.sh  tmp_init_test.db
backend/api/: Cargo.toml
backend/api/src/: config.rs  db_init.rs  main.rs
backend/api/src/handlers/: auth.rs  common.rs  mod.rs  system.rs
backend/api/src/middleware/: auth.rs
backend/common/: Cargo.toml
backend/common/src/: error.rs  lib.rs  models.rs  response.rs  utils.rs
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  menu.rs  role.rs  user.rs  user_role.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250101_000001_init.rs
backend/service/: Cargo.toml
backend/service/src/: auth.rs  system.rs
docs/: DEPLOYMENT.md  FAQ.md  前后端对接说明.md  实现总结.md  快速开始.md  用户中心功能说明.md
frontend/: .env  .env.development  package.json  pnpm-lock.yaml
frontend/src/api/: auth.ts  system-manage.ts
frontend/src/types/api/: api.d.ts
frontend/src/views/auth/forget-password/: index.vue
frontend/src/views/auth/login/: index.vue
frontend/src/views/auth/register/: index.vue
scripts/: initial-release.sh  prepare-release.sh
(+6 files in other folders)
