[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
actix-multipart = "0.6"
actix-web-httpauth = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
dotenvy = "0.15"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
futures = "0.3"
futures-util = "0.3"
once_cell = "1.19"
chrono = "0.4"
common = { path = "../common" }
service = { path = "../service" }
