[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
entity = { path = "../entity" }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
chrono = "0.4"
serde_json = "1.0"
regex = "1"
once_cell = "1.19"
